Fixed chat display from going off screen

--- a/dnd-frontend/src/app/room/room.component.css
+++ b/dnd-frontend/src/app/room/room.component.css
@@ -60,8 +60,8 @@
     flex: auto;
     max-height: calc(100% - 60px);
     background: #2f323b;
-    overflow: auto;
     padding-top: 10px;
+    overflow-y: scroll;
 }
 .chat-input {
     padding-left: 15px;
@@ -97,18 +97,18 @@
     position: relative;
     display: inline-block;
     width: 100%;
-    margin: 0 0 10px 0;
+    margin: 0 0 0 0;
     padding: 0;
 }
 .msg-box {
     display: flex;
     background: #5b5e6c;
-    padding: 10px 5px 5px 5px;
+    padding: 5px;
     border-radius: 0 6px 6px 0;
-    max-width: 80%;
-    width: auto;
-    float: left;
     box-shadow: 0 0 2px rgba(0,0,0,.12),0 2px 4px rgba(0,0,0,.24);
+    float: left;
+    max-width: 70%;
+    min-width: 40%;
 }
 .user-img {
     display: inline-block;
@@ -132,6 +132,10 @@
     font-size: 11pt;
     line-height: 13pt;
     color: white;
+    margin: 0;
+}
+.msg-self .msg {
+    float: right;
 }
 .msg:first-of-type {
     margin-top: 8px;
@@ -140,8 +144,9 @@
     color: rgba(255,255,255,.7);
     font-size: 8pt;
 }
-.username {
+.chat-username {
     margin-right: 3px;
+    font-size: 14px;
 }
 .posttime {
     margin-left: 3px;
@@ -150,9 +155,6 @@
     border-radius: 6px 0 0 6px;
     background: #2671ff;
     float: right;
-}
-.msg-self {
-    margin-bottom: 0 0 10px 0;
 }
 .msg-self .msg {
     text-align: right;
